unpackaged/main/default/objects/Deal_Statement__c/Deal_Statement__c.object-meta.xml
<CustomObject>
    <description>US-0008846 - [NA] Migrate JOIN NA Deals Trigger and related Classes to Hive</description>
    <label>Deal Statement</label>
    <nameField>
        <label>Deal Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>