unpackaged/main/default/objects/Deal_Statement__c/fields/Adjustment_Approved__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010376: Set to TRUE if Adjusted Statement is fully Approved</description>
    <label>Adjustment Approved</label>
    <type>Checkbox</type>
</CustomField>