unpackaged/main/default/objects/Deal_Statement__c/fields/Amount_Held_Back__c.field-meta.xml
<CustomField>
    <fullName>Amount_Held_Back__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <label>Subsidy Amount Held Back (40%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>