unpackaged/main/default/objects/Deal_Statement__c/fields/Disputes_Payout__c.field-meta.xml
<CustomField>
    <fullName>Disputes_Payout__c</fullName>
    <description>US-0008846 - [NA] Migrate JOIN NA Deals Trigger and related Classes to Hive
US-0010372</description>
    <label>Adjusted Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>