unpackaged/main/default/objects/Deal_Statement__c/fields/eBay_Seller__c.field-meta.xml
<CustomField>
    <fullName>eBay_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <label>eBay Seller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Statements</relationshipLabel>
    <relationshipName>Deal_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>