unpackaged/main/default/objects/Deal_Statement__c/fields/eBay_Seller_Rev_Rollup__c.field-meta.xml
<CustomField>
    <fullName>eBay_Seller_Rev_Rollup__c</fullName>
    <formula>TEXT( eBay_Seller__r.EBH_RevRollup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rev Rollup</label>
    <type>Text</type>
</CustomField>