unpackaged/main/default/objects/Deal_Statement__c/fields/eBaySeller_Name__c.field-meta.xml
<CustomField>
    <fullName>eBaySeller_Name__c</fullName>
    <description>US-0009686 - Hypercare: Updates needed to NA Deal Statement Attachment</description>
    <formula>eBay_Seller__r.Name</formula>
    <label>eBaySeller Name</label>
    <type>Text</type>
</CustomField>