unpackaged/main/default/objects/Deal_Statement__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>US-0009141 - [ETL] NA Deals Statement - 30 &amp; 60 days</description>
    <externalId>true</externalId>
    <label>Record External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>