unpackaged/main/default/objects/Deal_Statement__c/fields/Final_Statement_Approved__c.field-meta.xml
<CustomField>
    <fullName>Final_Statement_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010376:Set to TRUE if Final Statement is fully Approved</description>
    <label>Final Statement Approved</label>
    <type>Checkbox</type>
</CustomField>