unpackaged/main/default/objects/Deal_Statement__c/fields/Further_Dispute_Payout__c.field-meta.xml
<CustomField>
    <fullName>Further_Dispute_Payout__c</fullName>
    <description>US-0008846 - [NA] Migrate JOIN NA Deals Trigger and related Classes to Hive</description>
    <label>Further Dispute Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>