unpackaged/main/default/objects/Deal_Statement__c/fields/Initial_Payout__c.field-meta.xml
<CustomField>
    <fullName>Initial_Payout__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <label>Initial Payout (60%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>