unpackaged/main/default/objects/Deal_Statement__c/fields/Last_Statement_Sent_Out__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Sent_Out__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <label>Last Statement Sent Out</label>
    <type>DateTime</type>
</CustomField>