unpackaged/main/default/objects/Deal_Statement__c/fields/MostRecentAdjustStatement__c.field-meta.xml
<CustomField>
    <fullName>MostRecentAdjustStatement__c</fullName>
    <description>US-0010372 - [NA Deal Statement] Update Deal Statement - Change to Adjusted Payout</description>
    <label>MostRecentAdjustStatement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>