unpackaged/main/default/objects/Deal_Statement__c/fields/MostRecentAdjustStatementDate__c.field-meta.xml
<CustomField>
    <fullName>MostRecentAdjustStatementDate__c</fullName>
    <description>US-0010372 - [NA Deal Statement] Update Deal Statement - Change to Adjusted Payout</description>
    <label>MostRecentAdjustStatementDate</label>
    <type>DateTime</type>
</CustomField>