unpackaged/main/default/objects/Deal_Statement__c/fields/MostRecentFinalStatement__c.field-meta.xml
<CustomField>
    <fullName>MostRecentFinalStatement__c</fullName>
    <description>US-0009248 - [NA] Mass Send created Deal Statements with attached Excel to Sellers. 
stores attachment id (by ETL)</description>
    <label>MostRecentFinalStatement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>