unpackaged/main/default/objects/Deal_Statement__c/fields/MostRecentFinalStatementDate__c.field-meta.xml
<CustomField>
    <fullName>MostRecentFinalStatementDate__c</fullName>
    <description>US-0009424 - NA Deal Statements - Process fixes and updates</description>
    <label>MostRecentFinalStatementDate</label>
    <type>DateTime</type>
</CustomField>