unpackaged/main/default/objects/Deal_Statement__c/fields/MostRecentFirstStatementDate__c.field-meta.xml
<CustomField>
    <fullName>MostRecentFirstStatementDate__c</fullName>
    <description>US-0009424 - NA Deal Statements - Process fixes and updates</description>
    <label>MostRecentFirstStatementDate</label>
    <type>DateTime</type>
</CustomField>