unpackaged/main/default/objects/Deal_Statement__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>US-0011325 - [ETL] Add site and currency in deals monthly statement</description>
    <inlineHelpText>Listing Site Id</inlineHelpText>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>77</fullName>
                <label>DE</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>UK</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>FR</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>IT</label>
            </value>
            <value>
                <fullName>186</fullName>
                <label>ES</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>AU</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>US</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>