unpackaged/main/default/objects/Deal_Statement__c/fields/Sold_Item_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Sold_Item_Effective_Date__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <label>Sold Item Effective Date</label>
    <type>Date</type>
</CustomField>