unpackaged/main/default/objects/Deal_Statement__c/fields/Statement_Overpaid__c.field-meta.xml
<CustomField>
    <fullName>Statement_Overpaid__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <label>Statement Overpaid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Attention</fullName>
            </value>
            <value>
                <fullName>Balance Corrected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>