unpackaged/main/default/objects/Deal_Statement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation
US-0010371</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>1st Statement</fullName>
            </value>
            <value>
                <fullName>In 1st Payout Approval</fullName>
            </value>
            <value>
                <fullName>1st Payout Approved</fullName>
            </value>
            <value>
                <fullName>1st Statement Sent out</fullName>
            </value>
            <value>
                <fullName>1st Statement Paid</fullName>
            </value>
            <value>
                <fullName>2nd Statement</fullName>
                <label>Final Statement</label>
            </value>
            <value>
                <fullName>In 2nd Payout Approval</fullName>
                <label>In Final Payout Approval</label>
            </value>
            <value>
                <fullName>2nd Payout Approved</fullName>
                <label>Final Payout Approved</label>
            </value>
            <value>
                <fullName>2nd Statement Sent out</fullName>
                <label>Final Statement Sent out</label>
            </value>
            <value>
                <fullName>2nd Statement Paid</fullName>
                <label>Final Statement Paid</label>
            </value>
            <value>
                <fullName>In Dispute</fullName>
                <label>Adjusted Statement</label>
            </value>
            <value>
                <fullName>In Dispute Payout Approval</fullName>
                <label>In Adjusted Statement Approval</label>
            </value>
            <value>
                <fullName>Dispute Payout Approved</fullName>
                <label>Adjusted Statement Approved</label>
            </value>
            <value>
                <fullName>Dispute Statement Sent Out</fullName>
                <label>Adjusted Statement Sent Out</label>
            </value>
            <value>
                <fullName>Dispute Statement Paid</fullName>
                <label>Adjusted Statement Paid</label>
            </value>
            <value>
                <fullName>Payout Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>