unpackaged/main/default/objects/Deal_Statement__c/fields/Subsidy_30_Day_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_30_Day_Calculation__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <label>Subsidy 30 Day Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>