unpackaged/main/default/objects/Deal_Statement__c/fields/Subsidy_Final_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Final_Calculation__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <label>Subsidy Final (60-Day) Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>