unpackaged/main/default/objects/Deal_Statement__c/fields/SubsidyAdjustedCalculation__c.field-meta.xml
<CustomField>
    <fullName>SubsidyAdjustedCalculation__c</fullName>
    <description>US-0010372</description>
    <label>Subsidy Adjusted Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>