unpackaged/main/default/objects/Deal_Statement__c/fields/Total_Paid_Out__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Out__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <formula>Initial_Payout__c +  Second_Payout__c +  Disputes_Payout__c +  Further_Dispute_Payout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>