unpackaged/main/default/objects/Deal_Statement__c/fields/View_Deals_Report__c.field-meta.xml
<CustomField>
    <fullName>View_Deals_Report__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <formula>HYPERLINK(
/* If they&#39;re in Lightning */
IF($User.UIThemeDisplayed =&quot;Theme4d&quot;,
/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00Om0000000eDVyEAM/view?fv0=&quot;,
/* Otherwise use Classic syntax */
&quot;/00Om0000000eDVyEAM?pv0=&quot;)
&amp;Id,
&quot;View&quot;,
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Deals Report</label>
    <type>Text</type>
</CustomField>