unpackaged/main/default/objects/Deal_Statement__c/fields/X1st_Statement_Approved__c.field-meta.xml
<CustomField>
    <fullName>X1st_Statement_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010376: Set to TRUE if 1st Statement is fully Approved</description>
    <label>1st Statement Approved</label>
    <type>Checkbox</type>
</CustomField>