unpackaged/main/default/objects/Deal_Statement__c/fields/X2nd_Statement_Sent_Out__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Statement_Sent_Out__c</fullName>
    <description>US-0008778 - [NA] Monthly Deal Statement Creation</description>
    <label>2nd Statement Sent Out</label>
    <type>DateTime</type>
</CustomField>