unpackaged/main/default/objects/Deal_Statement__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>US-0009544 - [NA] Changes for NA Deal Statement emails to Seller</description>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>