unpackaged/main/default/objects/Deal_Statement__c/listViews/All_Statements.listView-meta.xml
<ListView>
    <fullName>All_Statements</fullName>
    <columns>NAME</columns>
    <columns>eBay_Seller__c</columns>
    <columns>Status__c</columns>
    <columns>Month__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Subsidy_30_Day_Calculation__c</columns>
    <columns>Subsidy_Final_Calculation__c</columns>
    <columns>Total_Paid_Out__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Statements</label>
</ListView>