unpackaged/main/default/objects/Deal_Statement__c/listViews/Daily_Deals_BU_Deal_Statement.listView-meta.xml
<ListView>
    <fullName>Daily_Deals_BU_Deal_Statement</fullName>
    <filterScope>Queue</filterScope>
    <label>Daily Deals Team</label>
    <queue>Daily_Deals_BU</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>