unpackaged/main/default/objects/Deal_Statement__c/listViews/Daily_Deals_Finance_Deal_Statement.listView-meta.xml
<ListView>
    <fullName>Daily_Deals_Finance_Deal_Statement</fullName>
    <filterScope>Queue</filterScope>
    <label>Daily Deals Finance</label>
    <queue>Daily_Deals_Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>