unpackaged/main/default/objects/Deal_Statement__c/listViews/Deals_BU_team_Deal_Statement.listView-meta.xml
<ListView>
    <fullName>Deals_BU_team_Deal_Statement</fullName>
    <filterScope>Queue</filterScope>
    <label>Deals BU team</label>
    <queue>Deals_BU_team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>