unpackaged/main/default/objects/Deal_Statement__c/listViews/Deals_Controllership_Deal_Statement.listView-meta.xml
<ListView>
    <fullName>Deals_Controllership_Deal_Statement</fullName>
    <filterScope>Queue</filterScope>
    <label>Deals Controllership</label>
    <queue>Deals_Controllership</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>